# Tinyproject

./: CMakeLists.txt  GeneralLinearSystem.cpp  GeneralLinearSystem.hpp  LinearSystem.cpp  LinearSystem.hpp  Matrix.cpp  Matrix.hpp  PosSymLinSystem.cpp  PosSymLinSystem.hpp  README.md  Regression.cpp  Regression.hpp  Vector.cpp  Vector.hpp  main.cpp
